src/index.css
:root {
  --primary-bg-color: snow;
  --secondary-bg-color: teal;
  --text-color: #343434;
}
* {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

h1 {
  color: var(--secondary-bg-color);
}
.header {
  background-color: var(--primary-bg-color);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  box-shadow: 0 0.125rem 0.25rem 0 rgb(0 0 0 / 11%);
  /* height: 30px; */
}
.header-content {
  margin: 0px 200px 0px 200px;
  display: flex;
  justify-content: space-between;
  color: var(--text-color);
  padding: 0px, 10px, 10px, 10px;
  /* max-width: 50%; */
}

.header-content > h3 {
  padding: 22px 0px 10px 0px;
  margin: 10px 0px 10px 0px;
  color: var(--text-color);

  display: inline;
}

.header-content > h3 > a {
  color: var(--text-color);
  text-decoration: none;
  cursor: pointer;
}
.header-content > h3 > a:hover {
  color: var(--secondary-bg-color);
}
.header-content > h3 > a:active {
  color: var(--secondary-bg-color);
}

.header-content > h3 > a::before {
  transform-origin: 100% 50%;
  transform: scale3d(0, 1, 1);
  transition: transform 0.3s;
}
.header-content > h3 > a {
  cursor: pointer;
  /* font-size: 18px; */
  position: relative;
  white-space: nowrap;
  color: var(--color-text);
}

.header-content > h3 > a::before,
.header-content > h3 > a::after {
  position: absolute;
  width: 100%;
  height: 1px;
  background: currentColor;
  top: 100%;
  left: 0;
  pointer-events: none;
}

.header-content > h3 > a::before {
  content: "";
  /* show by default */
}

.header-content > h3 > a:hover::before {
  transform-origin: 0% 50%;
  transform: scale3d(1, 1, 1);
}

#content {
  padding-top: 75px;
}

#home {
  display: flex;
  background-color: var(--primary-bg-color);
  /* margin-top: 85px; */
  /* height: 500px; */
  color: var(--text-color);
  padding-bottom: 20px;
}
.personal {
  background-color: var(--primary-bg-color);
  flex: 1;
  height: 100%;
}
.biography {
  background-color: var(--primary-bg-color);
  flex: 2;
  height: 100%;
}
.biography h2 {
  margin: 10px 0px;
}

#bio > h2 {
  margin-top: 20px;
}

#bio > p:nth-child(3) {
  margin-bottom: 0;
}

#profile {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  margin: 30px 30px 0px 30px;
  overflow: hidden;
}

.personal > h2 {
  margin-top: 10px;
  margin-bottom: 0;
}

.personal > h3 {
  /* color: var(--secondary-bg-color); */
  margin: 0;
}

#icons {
  display: flex;
  justify-content: space-between;
  margin: 5px 90px 0px 90px;
}
.icons-icon {
  width: 30px;
  height: 30px;
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.icons-icon:hover {
  -webkit-transform: scale(1.3, 1.3);
  -moz-transform: scale(1.3, 1.3);
  -ms-transform: scale(1.3, 1.3);
  -o-transform: scale(1.3, 1.3);
  transform: scale(1.3, 1.3);
}

#bio {
  display: block;
  text-align: start;
}
#education {
  display: flex;
  text-align: start;
}

#education > div {
  flex: 1;
}

#current-learn {
  margin-top: 0;
}
#current-learn > li {
  margin-bottom: 7px;
  font-weight: bold;
}

#love {
  color: var(--secondary-bg-color);
  font-weight: bolder;
}
.school > .info > p {
  margin: 0;
}
.school > .icon {
  float: left;
  margin: 0px 25px;
}

.school > .vcu-icon {
  float: left;
  margin: 0px 5px;
}
.school > .icon > #uor {
  height: 30px;
  width: 30px;
  margin: 6px 0px;
}

.school > .vcu-icon > #vcu {
  height: 30px;
  width: 69px;
  margin: 6px 0px;
}

/* Skills */
#skills {
  /* display: flex;
  justify-content: space-between; */
  /* height: 500px; */
  background-color: var(--secondary-bg-color);
  text-align: center;
  position: relative;
}
#skillet {
  position: absolute;
  top: -75px;
}
.section-header {
  /* text-align: center; */
  margin: 0;
  padding: 20px;
}

#skills-desc {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}
.skills-section > img {
  width: 100px;
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.skills-section > img:hover {
  -webkit-transform: scale(1.3, 1.3);
  -moz-transform: scale(1.3, 1.3);
  -ms-transform: scale(1.3, 1.3);
  -o-transform: scale(1.3, 1.3);
  transform: scale(1.3, 1.3);
}

/* PROJECTS */

#projects {
  display: block;
  justify-content: center;
  background-color: var(--primary-bg-color);

  /* height: 500px; */
  color: var(--text-color);
  padding-bottom: 20px;
  position: relative;
}
#project {
  position: absolute;
  top: -75px;
}

.project-card,
.project-card-reverse {
  border: 1px var(--secondary-bg-color) solid;
  border-radius: 20px;
  max-width: 50vw;
  height: 250px;
  display: flex;
  margin: 0 auto;
  overflow: hidden;
  margin-bottom: 30px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.project-card:hover,
.project-card-reverse:hover {
  -webkit-transform: scale(1.05, 1.05);
  -moz-transform: scale(1.05, 1.05);
  -ms-transform: scale(1.05, 1.1);
  -o-transform: scale(1.05, 1.05);
  transform: scale(1.05, 1.05);
  opacity: 0.7;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}
.project-card-reverse {
  flex-direction: row;
}

.card-left {
  flex: 1;
  overflow: hidden;
}
.card-right {
  flex: 1;
  text-align: center;
  background-color: #cccccc;
}
.project-image {
  height: 100%;
  width: 100%;
}

.tech-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
}
.tech {
  border: 1px solid var(--primary-bg-color);
  margin: 5px;
  background-color: var(--secondary-bg-color);
}
.project-link-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
  font-weight: bold;
}
.project-link {
  background-color: var(--secondary-bg-color);
  color: var(--text-color);
  border: 1px var(--secondary-bg-color) solid;
  border-radius: 4px;
  text-decoration: none;
  margin: 5px;

  cursor: pointer;
}

.project-link:hover {
  background-color: var(--primary-bg-color);
}

/* MUSIC */
#music {
  background-color: var(--secondary-bg-color);
  position: relative;
}
#musics {
  position: absolute;
  top: -75px;
}

#music-videos {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.container {
  position: relative;
  margin: 5px;
}
.image {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: 0.5s ease;
  backface-visibility: hidden;
}

.middle {
  transition: 0.5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.container:hover .image {
  opacity: 0.3;
}

.container:hover .middle {
  opacity: 1;
}

.text {
  background-color: var(--primary-bg-color);

  color: var(--secondary-bg-color);
  border: 1px var(--secondary-bg-color) solid;
  font-size: 16px;
  padding: 12px 20px;
  text-decoration: none;
  border-radius: 4px;
}
.text:hover {
  background-color: var(--text-color);
  color: white;
}

/* Contact */

#contact {
  background-color: var(--primary-bg-color);
  color: var(--text-color);
  position: relative;
}
#contacts {
  position: absolute;
  top: -75px;
}
input[type="email"],
input[type="name"],
select,
textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */
  border: 1px solid var(--text-color); /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
  font-family: "Times New Roman", Times, serif;
  font-size: 18px;
  color: var(--text-color);
}
/* input:focus {
  background-color: var(--secondary-bg-color);
} */

/* Style the submit button with a specific background color etc */
button[type="submit"] {
  background-color: var(--primary-bg-color);
  color: var(--secondary-bg-color);
  border: 1px var(--secondary-bg-color) solid;
  padding: 12px 20px;

  border-radius: 4px;
  cursor: pointer;
}

/* When moving the mouse over the submit button, add a darker green color */
button[type="submit"]:hover {
  background-color: var(--secondary-bg-color);
  color: var(--primary-bg-color);
}

/* Add a background color and some padding around the form */
.container-contact {
  border-radius: 5px;
  /* background-color: #f2f2f2; */
  padding: 20px;
  max-width: 70vw;
  margin: 0 auto;
}
#contact-from > #submit {
}

#status {
  width: 90%;
  max-width: 500px;
  text-align: center;
  padding: 10px;
  margin: 0 auto;
  border-radius: 8px;
}

#status.success {
  background-color: #4caf50;
  animation: status 4s ease forwards;
}

#status.error {
  background-color: firebrick;
  color: white;
  animation: status 4s ease forwards;
}

@keyframes status {
  0% {
    opacity: 1;
    pointer-events: all;
  }
  90% {
    opacity: 1;
    pointer-events: all;
  }
  100% {
    opacity: 0;
    pointer-events: none;
  }
}

/* Footer */
#footer {
  background-color: var(--secondary-bg-color);
  color: white;
  padding: 15px;
}

#footer > a {
  text-decoration: underline;

  color: white;
}

